<resources>
    <string name="AddPhotoReportByAngle">Добавить фотоотчет по ракурсу</string>
    <string name="Logout">Выйти</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Принять</string>
    <string name="accounting">Учет</string>
    <string name="accuracy_label">Точность:</string>
    <string name="add">Добавить</string>
    <string name="add_file">Загрузить файл</string>
    <string name="addresses_search_no_results">По вашему запросу ничего не найдено.</string>
    <string name="addresses_search_results">Результаты поиска</string>
    <string name="addresses_search_results_select_all">Выбрать все</string>
    <string name="all_field_required">Все поля должны быть заполнены</string>
    <string name="altitude_label">Высота:</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_cache">Кэш приложений</string>
    <string name="app_language">Язык интерфейса</string>
    <string name="app_memory">Память приложения</string>
    <string name="app_name">АРМ Нейродитех</string>
    <string name="app_title">АРМ Нейродитех</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_not_found">Не найдено приложение для выполнения этого действия</string>
    <string name="assembly_version">Сборка</string>
    <string name="attribute_changed">Атрибут изменен</string>
    <string name="attribute_changed_error">Ошибка при изменении атрибута</string>
    <string name="authorization">Авторизация</string>
    <string name="authorization_lack_permissions">"Недостаточно прав.
Обратитесь к администратору."</string>
    <string name="authorization_request">Запрос авторизации</string>
    <string name="auto_send_files">Автоматическая отправка файлов</string>
    <string name="autofill">Autofill</string>
    <string name="aviabled_so">объектов доступно</string>
    <string name="await_results">Операция выполняется. Ожидайте</string>
    <string name="back">Назад</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="base_url_missing">Url-адрес отсутствует</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness_text">Яркость</string>
    <string name="btn_car_arrival_create_rule_3255">Прибытие</string>
    <string name="btn_car_task_create_rule_3255">Отбытие</string>
    <string name="busy_memory">Занята память</string>
    <string name="button_apply">Применить</string>
    <string name="button_close">Закрыть</string>
    <string name="button_continue_task_creation">Продолжить создание задачи с этим объектом</string>
    <string name="button_create">Создать</string>
    <string name="button_reset">Очистить</string>
    <string name="button_show_location">Показать на карте</string>
    <string name="button_up_desc">Вверх</string>
    <string name="by_rakurs">По ракурсу</string>
    <string name="cacheManagerCancelBody">Do you want to cancel the map download?</string>
    <string name="cacheManagerCancelTitle">Cancel map download</string>
    <string name="cacheManagerCleanFailed">Cleaning failed. %s tiles deleted.</string>
    <string name="cacheManagerCleaningTitle">Cleaning tiles</string>
    <string name="cacheManagerDownloadingTitle">Downloading tiles</string>
    <string name="cacheManagerFailed">Loading completed with %s errors.</string>
    <string name="cacheManagerHandlingMessage">Handling zoom level: %1$s (from %2$s to %3$s)</string>
    <string name="cacheManagerNo">No</string>
    <string name="cacheManagerUnsupportedSource">"This online tile source doesn't support bulk download"</string>
    <string name="cacheManagerYes">Yes</string>
    <string name="cache_file">Кэшированные файлы</string>
    <string name="cache_saved_files">Кэшированные файлов: %1$d</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_permissions_action">Включить</string>
    <string name="camera_permissions_request">Разрешите приложению доступ к вашей камере и местоположению, чтобы использовать приложение.</string>
    <string name="camera_permissions_request_with_rationale">Вы не сможете использовать приложение, если не предоставите доступ к своей камере и местоположению.</string>
    <string name="cancel">Отменить</string>
    <string name="cancel_button">Отменить</string>
    <string name="cancel_delete_btn_text">"Отменить
выделение"</string>
    <string name="car_accounting_title">Учет</string>
    <string name="car_label_altitude">Высотность</string>
    <string name="car_number">Hомер автомобиля:</string>
    <string name="car_task_type">Тип задания:</string>
    <string name="car_type">Тип машины:</string>
    <string name="changed_stage">Вы сменили этап на %1$s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chec">на проверке</string>
    <string name="check_sticker_text">Выберите стикер</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Закрыть</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="collect_location_notification">АРМ Нейродитех собирает данные о местоположении, чтобы включить отслеживание рабочего перемещения, даже когда приложение закрыто или не используется.</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">7740cb35039d4a4a85db5149b492161e</string>
    <string name="com.google.firebase.crashlytics.version_control_info">"repositories {
  system: GIT
  local_root_path: \"$PROJECT_DIR\"
  revision: \"f879d0cf83073f5b0a14110fd78dcf66799de344\"
}
"</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="create_task">Создать задачу</string>
    <string name="default_zero_value">0.00</string>
    <string name="energi_save_mode">Экономия энергии/GPS</string>
    <string name="google_map">Google Карта</string>
    <string name="label_speed">Скорость:</string>
    <string name="last_location_update">Последнее обновление:</string>
    <string name="latitude_label">Широта:</string>
    <string name="location">Местоположение</string>
    <string name="location_address">Адрес:</string>
    <string name="location_information">Мое местоположение</string>
    <string name="longitude_lable">Долгота:</string>
    <string name="map_background">Подложка карты</string>
    <string name="off_switch">Выключено</string>
    <string name="openstreetmap_osm">OpenStreetMap (OSM)</string>
    <string name="osm_infocity">OSM Infocity</string>
    <string name="priority">Приоритет:</string>
    <string name="select_background_map">Выберите подложку карты</string>
    <string name="send_location">Отправить местоположение</string>
    <string name="sensor_type">Cell Tower + Wifi</string>
    <string name="sensor_type_label">Датчик:</string>
    <string name="settings_title">Настройки</string>
    <string name="task_body_lifetime_task">Срок жизни задания:</string>
    <string name="task_body_regulatory_date">Регламентный срок:</string>
    <string name="task_description">Описание задачи</string>
    <string name="task_type">Тип задания:</string>
    <string name="title_new_task_object_name">Наименование объекта</string>
    <string name="title_new_task_object_type">Тип объекта</string>
    <string name="title_new_task_performer">Исполнитель</string>
    <string name="title_new_task_performer_organization">Организация исполнитель</string>
    <string name="title_new_task_work_type">Вид работ</string>
    <string name="update_location">Обновления местоположения</string>
    <string name="updates_location">Обновления:</string>
    <string name="yandex_map">Яндекс Карта</string>
</resources>