<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/location_layout" android:tag="layout/fragment_location_info_0" android:background="?panelBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="1.0sp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/location_app_bar" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" app:liftOnScroll="false">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/location_toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="pin" app:navigationIconTint="@color/secondaryColor" app:title="@string/location_information" app:titleCentered="true" app:titleTextColor="@color/secondaryColor" />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.tabs.TabLayout android:id="@id/tabLayout" android:layout_width="fill_parent" android:layout_height="44.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior" style="@style/BrandTabLayout">
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location" />
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_title" />
    </com.google.android.material.tabs.TabLayout>
    <androidx.core.widget.NestedScrollView android:id="@id/location_scroll_pane" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="44.0dip" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="8.0sp" android:layout_marginHorizontal="8.0sp">
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labellat" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/latitude_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:id="@id/tv_lat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/default_zero_value" app:layout_constraintStart_toEndOf="@id/tv_labellat" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labellon" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/longitude_lable" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labellat" />
            <TextView android:id="@id/tv_lon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/default_zero_value" app:layout_constraintStart_toEndOf="@id/tv_labellon" app:layout_constraintTop_toBottomOf="@id/tv_lat" />
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labelaltitude" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/altitude_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labellon" />
            <TextView android:id="@id/tv_altitude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_zero_value" app:layout_constraintStart_toEndOf="@id/tv_labelaltitude" app:layout_constraintTop_toTopOf="@id/tv_labelaltitude" />
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labelaccuracy" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/accuracy_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labelaltitude" />
            <TextView android:id="@id/tv_accuracy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_zero_value" app:layout_constraintStart_toEndOf="@id/tv_labelaccuracy" app:layout_constraintTop_toTopOf="@id/tv_labelaccuracy" />
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labelspeed" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/label_speed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labelaccuracy" />
            <TextView android:id="@id/tv_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_zero_value" app:layout_constraintStart_toEndOf="@id/tv_labelspeed" app:layout_constraintTop_toTopOf="@id/tv_labelspeed" />
            <TextView android:id="@id/tv_sensor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sensor_type" app:layout_constraintStart_toEndOf="@id/tv_labelsensor" app:layout_constraintTop_toTopOf="@id/tv_labelsensor" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/locations_updates_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider">
                <com.google.android.material.textview.MaterialTextView android:textColor="@color/secondaryColor" android:id="@id/locations_updates_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_location" android:labelFor="@id/version_text_view" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.MainTheme.Caption" />
                <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/locations_updates" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/locations_updates_label" app:switchPadding="8.0dip" app:thumbTint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labelupdates" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/updates_location" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/locations_updates_layout" />
            <TextView android:id="@id/tv_updates" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/off_switch" app:layout_constraintStart_toEndOf="@id/tv_labelupdates" app:layout_constraintTop_toTopOf="@id/tv_labelupdates" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/isHighAccuracy_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0sp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labelupdates">
                <com.google.android.material.textview.MaterialTextView android:textColor="@color/secondaryColor" android:id="@id/isHighAccuracy_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/energi_save_mode" android:labelFor="@id/version_text_view" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.MainTheme.Caption" />
                <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/isHighAccuracy" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/isHighAccuracy_label" app:switchPadding="8.0dip" app:thumbTint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_labelsensor" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/sensor_type_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/isHighAccuracy_layout" />
            <TextView android:id="@id/tv_address" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@id/tv_lbladdress" app:layout_constraintTop_toTopOf="@id/tv_lbladdress" />
            <TextView android:id="@id/tv_lbladdress" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/location_address" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_labelspeed" />
            <TextView android:textColor="@color/app_blue" android:id="@id/tv_lblupdated" android:layout_width="170.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/last_location_update" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_lbladdress" />
            <TextView android:id="@id/tv_updated" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/tv_lblupdated" app:layout_constraintStart_toEndOf="@id/tv_lblupdated" app:layout_constraintTop_toTopOf="@id/tv_lblupdated" />
            <View android:id="@id/divider" android:background="?android:listDivider" android:layout_width="409.0dip" android:layout_height="1.0dip" android:layout_marginTop="32.0dip" app:layout_constraintTop_toBottomOf="@id/tv_updated" />
            <com.google.android.material.button.MaterialButton android:textColor="@android:color/white" android:id="@id/btnSendLocation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0sp" android:text="@string/send_location" android:textAllCaps="false" android:layout_marginStart="45.0dip" android:layout_marginEnd="45.0dip" android:backgroundTint="@color/secondaryColor" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/settings" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="44.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <Button android:id="@id/map_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/map_background" style="@style/ButtonStandardStyle" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
